[tool.poetry]
name = "merkly"
version = "0.8.2"
description = "🌳 The simple and easy implementation of Merkle Tree"
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/merkly.git"
documentation = "https://pypi.org/project/merkly/"
readme = "README.md"
license = "MIT"
keywords = [
    "merkle-tree",
    "merkle-proof",
    "merkle-root",
    "keccak256",
    "blockchain",
]

[tool.poetry.dependencies]
    pycryptodome = "^3.19.0"
    pydantic = "^1.10.2"
    python = "^3.8"

[tool.poetry.dev-dependencies]
    conventional-pre-commit = "^3.0.0"
    pre-commit = "^3.0.3"
    coverage = "^7.2.7"
    pyclean = "^2.2.0"
    pytest = "^7.2.1"
    black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
w-t = "scripts.poetry:w_t"
lint = "scripts.poetry:lint"

[tool.pytest.ini_options]
markers = [
    "merkletreejs: marks tests as merkletreejs (deselect with '-m \"not merkletreejs\"')",
    "benchmark: marks tests as benchmark (deselect with '-m \"not benchmark\"')",
]