[tool.poetry]
name = "merkly"
version = "1.1.1"
description = "🌳 The simple and easy implementation of Merkle Tree"
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/merkly.git"
documentation = "https://pypi.org/project/merkly/"
readme = "README.md"
license = "MIT"
keywords = [
    "merkle-tree",
    "merkle-proof",
    "merkle-root",
    "keccak256",
    "blockchain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography"
]

[tool.poetry.dependencies]
    pycryptodome = "^3.19.0"
    pydantic = "^2.9.2"
    python = "^3.8"

[tool.poetry.dev-dependencies]
    conventional-pre-commit = "^3.0.0"
    pre-commit = "^3.0.3"
    coverage = "^7.2.7"
    pyclean = "^3.0.0"
    pytest = "^7.2.1"
    black = "^24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
w-t = "scripts.poetry:w_t"
lint = "scripts.poetry:lint"

[tool.pytest.ini_options]
markers = [
    "merkletreejs: marks tests as merkletreejs (deselect with '-m \"not merkletreejs\"')",
    "benchmark: marks tests as benchmark (deselect with '-m \"not benchmark\"')",
]